# Projeto-VI

./: .gitignore  README.md  projeto_visualizacao_tmdb.ipynb  pyproject.toml
configs/: local_sample_dataset.json  tmdb.json  tmdb_top_rated_2025.json
data/: sample_dataset.json
src/viz_api_project/: __init__.py  __main__.py  cli.py  config.py  env.py  pipeline.py
src/viz_api_project/adapters/: http_adapter.py
src/viz_api_project/api/: __init__.py  client.py  tmdb_client.py
src/viz_api_project/charts/: __init__.py  bar.py  chord.py  common.py  line.py
src/viz_api_project/data/: __init__.py  normalizer.py  tmdb_transformer.py
src/viz_api_project/dtos/: clean_dataset_dto.py
src/viz_api_project/facades/: __init__.py  visualization_facade.py
src/viz_api_project/repositories/: __init__.py  generic_repository.py  movie_repository.py  tmdb_movie_repository.py
src/viz_api_project/services/: generic_dataset_service.py  movie_dataset_service.py  visualization_service.py
src/viz_api_project/strategies/: __init__.py  bar_chart_strategy.py  chart_strategy.py  chord_chart_strategy.py  line_chart_strategy.py
tests/: test_clean_dataset_dto.py  test_movie_dataset_service.py  test_normalizer.py  test_tmdb_client.py  test_tmdb_transformer.py  test_visualization_facade.py
